--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
    
-   <header class="header">
+   <header class="header headerMedia">
        <div class="container">
            <div class="headerInner">
                <div class="headerLogo">
@@ -27,7 +27,16 @@
                    <a class="navLink" href="#">contacts</a>      
                    <a class="navLink" href="#">terms & info</a>        
                    <a class="navLink" href="#">cart</a>
-               </nav>     
+               </nav>
+               
+               <div class="navToggle">
+                   <span class="navToggleItem">
+                      <span class="nTmenu">
+                          <span class="menu">menu</span>
+                          <span class="cart">cart</span>
+                      </span>
+                   </span>
+               </div>     
            </div>
        </div>
    </header>
@@ -246,6 +255,10 @@
            </div>
        </div>
    </footer>
+   
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+   <script src="assets/js.js"></script>
+   
    
 </body>
 </html>
